项目体检全量修复：P0/P1/P2 + O1-O12 优化项
P0 阻塞性问题修复：
- ProductSearchController 改用 Result<T> 统一返回格式
- FeignClient 路径补上 context-path 前缀，修复 404
- AccountFeignClient URL 冲突修复，独立路径设计

P1 功能正确性修复：
- FinUserFavoriteDTO 统一字段定义（productCode）
- UserServiceImpl 复用 JwtUtil，统一 JWT 生成
- UserController.update 密码防覆盖
- UmsRole 补充 @TableName 注解
- PermissionInterceptor 空集合防护（roleIds/resourceIds）

P2 安全与代码质量修复：
- MD5 -> BCrypt 密码加密升级（UmsAdminServiceImpl, UserServiceImpl）
- 所有 @RequestBody 补充 @Valid 校验
- BeanConvertUtil 废弃 API 替换（newInstance）

O 优化建议项（O1-O12）：
- O1 删除空 StringUtils.java
- O2 System.out 替换为 SLF4J 日志
- O3 硬编码 URL 替换为 AuthConstant.PERMIT_ALL_URLS
- O4 全部 12 个 Entity 统一继承 BaseEntity
- O5 删除冗余无参构造器
- O6 删除注释空 UserMapper.xml
- O7 MyBatis-Plus 3.5.10 -> 3.5.7，新建 MyBatisPlusConfig 分页插件
- O8 RabbitMqConfig 移至 finance-message 模块
- O9 全部 DTO/VO 统加 @Schema 注解
- O10 修正 CLAUDE.md 端口表及 context-path
- O11 finance-user 补充 application.yml
- O12 gateway 通配符排除改为精确排除

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>